--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergency Stop MQTT</title>
+    <title>Emergency Stop STS 5 MQTT</title>
     <style>
         
         /* Estilo para el botón */
@@ -20,6 +20,12 @@
         #sendButton:hover {
             background-color: #45a049;
         }
+        /* Estilo para el fondo */
+        body {
+            background-color: #E7F1F2;  /* Reemplaza este color con el de tu imagen */
+            margin: 0;
+            padding: 0;
+        }
 
         /* Estilo para el SVG */
         #svgContainer {
@@ -30,7 +36,7 @@
 </head>
 <body>
 
-    <h1>Emergency Stop MQTT</h1>
+    <h1>Emergency Stop STS 5 MQTT</h1>
 
     <!-- Botón para enviar mensaje -->
     <button id="sendButton">Enviar true a pulsar</button>
