--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
         /* Estilo para el fondo */
         body {
+
             background-color: #E7F1F2;  /* Reemplaza este color con el de tu imagen */
             margin: 0;
             padding: 0;
@@ -29,8 +30,15 @@
 
         /* Estilo para el SVG */
         #svgContainer {
-            width: 300px;
-            height: 300px;
+
+             width: 900px;
+             height: 500px;
+             margin: 0 auto; /* Esto centra horizontalmente */
+             display: flex;
+             justify-content: center; /* Centrado horizontal */
+             align-items: center; /* Centrado vertical */
+             background-color: #E7F1F2; /* O el color que desees para el fondo del contenedor */
+
         }
     </style>
 </head>
