--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         /* Estilo para el SVG */
         #svgContainer {
 
-             width: 900px;
-             height: 500px;
+             width: 80%;
+             height: auto;
              margin: 0 auto; /* Esto centra horizontalmente */
              display: flex;
              justify-content: center; /* Centrado horizontal */
