--- a/index.html
+++ b/index.html
@@ -26,7 +26,20 @@
             background-color: #E7F1F2;  /* Reemplaza este color con el de tu imagen */
             margin: 0;
             padding: 0;
+            
         }
+        /* Contenedor general de la página */
+        .container {
+             width: 90%;  /* El contenedor ocupará el 90% del ancho disponible */
+             max-width: 1200px;  /* Ancho máximo para pantallas grandes */
+             height: auto;
+             text-align: center;
+             display: flex;
+             flex-direction: column;
+             justify-content: center;
+            align-items: center;
+        }
+
 
         /* Estilo para el SVG */
         #svgContainer {
@@ -38,6 +51,20 @@
              justify-content: center; /* Centrado horizontal */
              align-items: center; /* Centrado vertical */
              background-color: #E7F1F2; /* O el color que desees para el fondo del contenedor */
+
+        /* Media Query para pantallas pequeñas (móviles) */
+        @media (max-width: 600px) {
+        #svgContainer {
+        width: 95%;  /* El SVG ocupará el 95% del ancho de la pantalla en móviles */
+          }
+        }
+
+        /* Media Query para pantallas más grandes (tablets y PC) */
+        @media (min-width: 601px) {
+        #svgContainer {
+        width: 80%;  /* El SVG ocupará el 80% del ancho de la pantalla en tablets y PC */
+          }
+        } 
 
         }
     </style>
@@ -52,18 +79,18 @@
     <!-- Contenedor para la imagen SVG -->
     <div id="svgContainer">
         <svg
-   version="1.1"
-   id="svg1"
-   width="1147"
-   height="673"
-   viewBox="0 0 1147 673"
-   sodipodi:docname="WhatsApp Image 2025-05-21 at 5.05.05 PM.svg"
-   inkscape:version="1.3.2 (091e20e, 2023-11-25, custom)"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:xlink="http://www.w3.org/1999/xlink"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:svg="http://www.w3.org/2000/svg">
+     version="1.1"
+     id="svg1"
+     width="1147"
+     height="673"
+     viewBox="0 0 1147 673"
+     sodipodi:docname="WhatsApp Image 2025-05-21 at 5.05.05 PM.svg"
+     inkscape:version="1.3.2 (091e20e, 2023-11-25, custom)"
+     xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+     xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+     xmlns:xlink="http://www.w3.org/1999/xlink"
+     xmlns="http://www.w3.org/2000/svg"
+     xmlns:svg="http://www.w3.org/2000/svg">
   <defs
      id="defs1" />
   <sodipodi:namedview
