--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          /* Estilo para el título */
         h1 {
            text-align: center;
-           font-size: 3em; /* Tamaño por defecto para pantallas grandes */
+           font-size: auto; /* Tamaño por defecto para pantallas grandes */
            margin-top: 20px;
            margin-bottom: 20px;
            color: #333; /* Color del texto */
