--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
         /* Media Query para pantallas pequeñas (móviles) */
         @media (max-width: 600px) {
+         h1 {
+        font-size: 2em;  /* El tamaño del título será más pequeño en móviles */
+        margin-top: 10px;
+        margin-bottom: 10px;
+        }
+            
         #svgContainer {
         width: 95%;  /* El SVG ocupará el 95% del ancho de la pantalla en móviles */
           }
