--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         /* Estilo para el título */
         h1 {
            text-align: center;
-           font-size: 90%; /* Tamaño por defecto para pantallas grandes */
+           font-size: 100%; /* Tamaño por defecto para pantallas grandes */
            margin-top: 20px;
-           margin-bottom: 20px;
+           margin-bottom: 0%;
            color: #333; /* Color del texto */
 
         }
