--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            text-align: center;
            font-size: 100%; /* Tamaño por defecto para pantallas grandes */
            margin-top: 20px;
-           margin-bottom: 0%;
+           margin-bottom: 20px;
            color: #333; /* Color del texto */
 
         }
